crates/pgls_pretty_print/tests/snapshots/single/tests__delete_stmt_0_80.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/single/delete_stmt_0.sql
snapshot_kind: text
---
DELETE FROM users WHERE id = 1;
