crates/pgls_pretty_print/tests/snapshots/single/tests__delete_with_cte_returning_0_100.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/single/delete_with_cte_returning_0.sql
snapshot_kind: text
---
WITH
stale
AS (
  SELECT
    id
  FROM
    sessions
  WHERE
    last_seen < NOW() - CAST('30 days' AS INTERVAL)
)
DELETE FROM sessions
USING stale
WHERE
  sessions.id = stale.id
RETURNING sessions.id;
