crates/pgls_pretty_print/tests/snapshots/single/tests__discard_stmt_0_100.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/single/discard_stmt_0.sql
snapshot_kind: text
---
DISCARD ALL;
